--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
   }
 }
