--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,9 +14,11 @@
     "express": "^4.18.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "util": "^0.12.4"
   }
 }
