--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
