--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,9 +20,13 @@
     "moment": "^2.30.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "mongoose-paginate-v2": "^1.8.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "netlify": "^13.1.14",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "util": "^0.12.4"
   }
 }
